css/default.css
/* ... */
.mode-selector button:not(.selected):hover::before {
    opacity: 1.0;
}
.mode-selector button:not(:disabled):hover {
    color: var(--GW-mode-selector-button-hover-text-color);
    cursor: pointer;
}
.mode-selector button:not(:disabled):active {
    transform: translateY(2px);
}
.mode-selector button:hover::after,
.mode-selector button.selected::after,
.mode-selector button.active:not(:hover)::after {
    content: "";
    position: absolute;
    bottom: 0.25em;
    left: 0;
    right: 0;
    width: calc(100% - 12px);
    margin: auto;
}
.mode-selector button:not(:disabled):active::after {
    transform: translateY(-2px);
}
.mode-selector button:hover::after,
.mode-selector button.selected::after {
    border-bottom: 1px solid currentColor;
}
.mode-selector button.active:not(:hover)::after {
    border-bottom: 1px dotted currentColor;
}

/*  Inline mode selectors.
 */

.mode-selector-inline {
    --GW-mode-selector-background-color: var(--background-color);

    display: inline;
    position: relative;
    bottom: 0.125em;
}

.mode-selector-inline button {
    display: inline-block;
    margin: 0 0 0 calc(  var(--mode-selector-button-base-left-margin)
                       + var(--mode-selector-button-left-adjust)
                       - 0.25em);
}

/*  Fixed mode selectors.
 */

#ui-elements-container .mode-selector {
    position: absolute;
    display: flex;
    box-sizing: content-box;
    margin: 3px;
    opacity: 0.3;
    transition:
        opacity 2s ease;
}
#ui-elements-container .mode-selector:hover {
    transition: none;
    opacity: 1.0;
}
#ui-elements-container .mode-selector.hidden {
    opacity: 0;
}

@media only screen and (hover: hover) {
    #ui-elements-container .mode-selector {
        outline: 3px solid transparent;
    }
    #ui-elements-container .mode-selector:hover {
        outline: 3px double var(--GW-mode-selector-border-hover-color);
    }
}
@media only screen and (hover: none) {
    #ui-elements-container .mode-selector {
        outline: 1px dotted var(--GW-mode-selector-border-hover-color);
    }
}

@media only screen and (max-width: 1534px) {
    #ui-elements-container .mode-selector {
        flex-flow: column;
        padding: 0.15em 0.1em;
        align-items: flex-start;
    }
    #ui-elements-container .mode-selector button + button {
        margin-top: 0.25em;
    }
}
@media only screen and (max-width: 1279px) {
    #ui-elements-container .mode-selector {
        background-color: var(--GW-mode-selector-mobile-background-color);
        opacity: 1.0;
    }
    #ui-elements-container .mode-selector button {
        margin: 0;
        padding: 0;
        width: 2em;
        height: 2em;
        align-items: center;
        box-shadow: none;
        color: transparent;
        opacity: 0.1;
    }
    #ui-elements-container .mode-selector button + button {
        margin-top: 0.5em;
    }
    #ui-elements-container .mode-selector button:hover,
    #ui-elements-container .mode-selector button.selected {
        opacity: 0.5;
    }
    #ui-elements-container .mode-selector button::before {
        left: 12.5%;
        width: 75%;
        height: 75%;
        opacity: 1.0;
    }
    #ui-elements-container .mode-selector button:not(:disabled):hover {
        color: transparent;
    }
}
@media only screen and (max-width: 649px) {
    #ui-elements-container .mode-selector {
        top: unset;
        padding: 0;
    }
    #ui-elements-container .mode-selector button {
        width: 3em;
        height: 3em;
        border-style: solid;
        border-color: transparent;
    }
    #ui-elements-container .mode-selector button + button {
        margin-top: 0;
    }
}

/******************************/
/* GENERAL ACTIVITY INDICATOR */
/******************************/

#general-activity-indicator {
    position: fixed;
    width: 1em;
    bottom: 0.25em;
    left: 0.25em;
    visibility: hidden;
}

#general-activity-indicator svg {
    display: block;
    width: 100%;
}

#general-activity-indicator.on {
    visibility: visible;
}
#general-activity-indicator.on svg {
    animation: fa-spin 0.75s infinite steps(8);
}

@keyframes fa-spin {
      0% { transform: rotate(0deg);   }
    100% { transform: rotate(360deg); }
}

@media only screen and (max-width: 649px) {
    display: none;
}

/****************/
/* TRANSCLUSION */
/****************/

a.include-loading:empty,
a.include-loading-failed:empty {
    margin: 0;
}
.markdownBody a.include-loading:empty,
.markdownBody a.include-loading-failed:empty {
    background: none;
}

a.include-loading.include-spinner {
    pointer-events: none;
    --spinner-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M222.7 32.15C227.7 49.08 218.1 66.9 201.1 71.94C121.8 95.55 64 169.1 64 255.1C64 362 149.1 447.1 256 447.1C362 447.1 448 362 448 255.1C448 169.1 390.2 95.55 310.9 71.94C293.9 66.9 284.3 49.08 289.3 32.15C294.4 15.21 312.2 5.562 329.1 10.6C434.9 42.07 512 139.1 512 255.1C512 397.4 397.4 511.1 256 511.1C114.6 511.1 0 397.4 0 255.1C0 139.1 77.15 42.07 182.9 10.6C199.8 5.562 217.6 15.21 222.7 32.15V32.15z"/></svg>');
}

/*  Loading spinner.
 */
a.include-loading.include-spinner::after {
    display: inline-block;
    animation: fa-spin 2s infinite linear;
    position: relative;
    opacity: 0.5;
    top: 0.25em;
}

a.include-loading.include-spinner:empty::after {
    content: var(--spinner-image);
    width: 1.25em;
    height: 1.25em;
    margin: 0;
}

a.include-loading.include-spinner:not(:empty)::after,
a.include-loading.include-spinner[data-link-icon]:not(:empty)::after {
    background-image: var(--spinner-image);
}
a.include-loading.include-spinner:not(:empty)::after {
    --spinner-size: 0.9em;

    background-size: var(--spinner-size);
    content: "";
    font-size: var(--spinner-size);
    width: var(--spinner-size);
    height: var(--spinner-size);
    margin: 0 0.1em 0 0.2em;
    top: unset;
    bottom: 0;
}
/* ... */

